# aws-lambda-benchmarks

./: LICENSE  README.md  api-cannon.sh
csharp/: Handler.cs  aws-csharp.csproj  serverless.yml
fsharp/: Handler.fs  aws-fsharp.fsproj  serverless.yml
golang/: Makefile  go.mod  go.sum  serverless.yml
golang/hello/: main.go
kotlin/: build.gradle  serverless.yml
kotlin/src/main/kotlin/com/serverless/: ApiResponse.kt  Handler.kt
python/: handler.py  serverless.yml
rust/: .gitignore  Cargo.toml  package-lock.json  package.json  serverless.yml
rust/src/: main.rs
typescript/: handler.ts  package-lock.json  package.json  serverless.yml
