[package]
name = "perfservice"
version = "0.1.0"
edition = "2018"
authors = ["Mark Fowler <mark.fowler@stoictechnologygroup.com>"]

[dependencies]
http = "0.1.20"
lambda_runtime = "0.2.1"
lambda_http = "0.1.1"
serde = "1.0"
serde_derive = "1.0.101"
serde_json = "1.0.41"
rusoto_core = "0.41.0"
rusoto_dynamodb = "0.41.0"
log = "0.4.8"
simple_logger = "1.3.0"
